Fix widget flow output when widget height is too small

--- a/packages/eez-studio-ui/_stylesheets/project-editor.less
+++ b/packages/eez-studio-ui/_stylesheets/project-editor.less
@@ -1127,6 +1127,8 @@
 
             width: var(--size);
             height: calc(var(--size) * 2);
+
+            min-height: 10px;
         }
 
         [data-connection-input-id] {
